@@ -17,6 +17,7 @@ class Gem::Commands::FetchCommand < Gem::Command
 
     add_version_option
     add_platform_option
+    add_prerelease_option
   end
 
   def arguments # :nodoc:
@@ -39,8 +40,10 @@ class Gem::Commands::FetchCommand < Gem::Command
 
     gem_names.each do |gem_name|
       dep = Gem::Dependency.new gem_name, version
+      dep.prerelease = options[:prerelease]
 
-      specs_and_sources = Gem::SpecFetcher.fetcher.fetch dep
+      specs_and_sources = Gem::SpecFetcher.fetcher.fetch(dep, false, true,
+                                                         dep.prerelease?)
 
       spec, source_uri = specs_and_sources.sort_by { |s,| s.version }.last
 
